Trigger GH actions

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,4 +13,4 @@ main:
     url: /talks/    
         
   - title: "Blog"
-    url: https://medium.com/@annedrewhu
+    url: https://wholehalves.substack.com/
