--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Amber Hu <br/>(they/them)"
-  avatar           : "annedrew_kiva_square.png"
+  avatar           : "amber_kiva_square.png"
   bio              : "PhD Candidate at MSU Educational Psychology & Educational Technology"
   location         : "Mid-Michigan & Seattle"
   employer         :
