--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Amber Hu <br/>(they/them)"
+  name             : "Amber J. Hu <br/>(they/them)"
   avatar           : "amber_kiva_square.png"
   bio              : "PhD Candidate at MSU Educational Psychology & Educational Technology"
   location         : "Mid-Michigan & Seattle"
